--- a/portada.tex
+++ b/portada.tex
@@ -1,9 +1,3 @@
-\documentclass{article}
-\usepackage[spanish,mexico]{babel}
-\usepackage[margin=2.5cm]{geometry}
-\usepackage{graphicx}
-
-\begin{document}
 \thispagestyle{empty}
 \centering
 \includegraphics[scale=0.5]{logo-unam.jpg}
@@ -30,13 +24,9 @@
 
     \Large LUIS MONTEJANO PEIMBERT
     
-    ENTIDAD DE ADSCRIPCIÓN %(INDICAR ENTIDAD DE ADSCRIPCIÓN, INDEPENDIENTEMENTE DE QUE ÉSTA PERTENEZCA A LA UNAM O NO)
+    INSTITUTO DE MATEMATICAS  % CREO (INDICAR ENTIDAD DE ADSCRIPCIÓN, INDEPENDIENTEMENTE DE QUE ÉSTA PERTENEZCA A LA UNAM O NO)
     \vspace{1.5cm}
 
     \Large LUGAR, MES Y AÑO EN QUE SE REALIZÓ EL REGISTRO
 \end{center}
 \newpage
-
-
-
-\end{document}
