agregado libro en bibliografia

--- a/blb.bib
+++ b/blb.bib
@@ -14,3 +14,14 @@ title = {Structural additive theory  / David J. Grynkiewicz.},
 year = {2013},
 }
 
+@book{gardner_2006,
+place={Cambridge},
+edition={2},
+series={Encyclopedia of Mathematics and its Applications},
+title={Geometric Tomography},
+DOI={10.1017/CBO9781107341029},
+publisher={Cambridge University Press},
+author={Gardner, Richard J.},
+year={2006}, 
+collection={Encyclopedia of Mathematics and its Applications}
+}
