Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -8,7 +8,7 @@
 
 
 
-\newcommand{\N}{\mathbb{S}}
+%\newcommand{\S}{\mathbb{S}}
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\Z}{\mathbb{Z}}
 \newcommand{\Q}{\mathbb{Q}}
