--- a/notes/note01.tex
+++ b/notes/note01.tex
@@ -53,6 +53,38 @@ Let $A$ be a finite subset of $\R^d$. Denote by $L(A)$ the set of lines $l$ thro
 $$\lvert (l + x) \cap A \rvert > 1,$$
 for some $x \in \R^d$. Notice that the set $L(A)$ is finite, since $A$ is finite and there is a unique line that passes through any pair of points.
 
+\begin{lemma}
+    Let $A$ be a finite subset of $\R^d$ and let $L$ be a line through the origin in $\R^d$. Then there is a line $K$ through the origin in $\R^d$ such that
+    \begin{itemize}
+        \item[i)] $p_{K^\perp}$ maps parallel lines in $\R^d$ into parallel lines in $K^\perp$;
+        \item[ii)] $\lvert A \rvert  = \lvert p_{K^\perp}(A) \rvert$;
+    \end{itemize}
+\end{lemma}
+\begin{proof}
+    (\textit{Sketch}) Choose a line $K$ be a line through the origin in $\R^d$ that is not $L$ and is not a member of $L(A)$ (we can do this because $L \cup L(A)$ is finite).
+\end{proof}
+%\begin{proof}
+%Let $K$ be a line through the origin in $\R^d$ that is not $L$ and is not a member of $L(A)$ (we can do this because $L \cup L(A)$ is finite). Since $L \cap K = \{0\}$, $p_{K^\perp}(L)$
+ %   \begin{itemize}
+  %      \item[i)] Let $$
+   %     \item[ii)] Suppose that there are $a, a^\prime \in A$ such that $p_{K^\perp}(a) = p_{k^\perp}(a^\prime).$ By Lemma 1, $a - a^\prime \in K.$ By definition, $a-a^\prime = $
+   % \end{itemize}
+\end{proof}
+
+\begin{theorem}
+    Theorem 1 is also true in dimension 3.
+\end{theorem}
+\begin{proof}
+    Let 
+    $$\Omega = A \cup B \cup (A + B) \cup p_L(A) \cup p_L(B) \cup p_L(A+B) \subset \R^3.$$
+    By Lemma 3, we can choose a line $K$ through the origin in $\R^3$ such that
+    $\lvert p_{K^\perp}(A) \rvert = \lvert A \rvert$, $\lvert p_{K^\perp}(B) \rvert = \lvert B \rvert$, $\lvert p_{K^\perp}(A + B) \rvert = \lvert A + B\rvert$, $\lvert p_{L^\perp}(p_{K^\perp}(A)) \rvert = \lvert p_{L^\perp}(A) \rvert$ and $\lvert p_{L^\perp}(p_{K^\perp}(B)) \rvert = \lvert p_{L^\perp}(B) \rvert$. Thus, by Theorem 1
+    $$\lvert   p_{K^\perp}(A) +  p_{K^\perp}(B) \rvert \geq \left( \frac{\lvert  p_{K^\perp}(A) \rvert }{\lvert  p_{L^\perp}(p_{K^\perp}(A))  \rvert} + \frac{\lvert  p_{K^\perp}(B) \rvert }{\lvert  p_{L^\perp}(p_{K^\perp}(B))  \rvert } - 1\right) \left( \lvert p_{K^\perp}(A) \rvert + \lvert p_{K^\perp}(B) \rvert - 1 \right).$$ And by Lemma 2 we have,
+     $$\lvert A + B \rvert \geq \left( \frac{\lvert A \rvert }{\lvert p_{L^\perp}(A) \rvert} + \frac{\lvert B \rvert }{\lvert p_{L^\perp} (B) \rvert } - 1\right) \left( \lvert p_{L^\perp}(A) \rvert + \lvert p_{L^\perp}(B) \rvert - 1 \right).$$
+    
+    
+\end{proof}
+
 
 %Consider $A, B$ finite subsets of $\R^3.$ Define the set
 %$$\Omega(A, B) = A \cup B \cup (A + B) \cup p_H(A) \cup p_H(B) \cup p_H(A+B) \subset \R^3.$$
