--- a/drc/notes/aplicacion_bipartitas.tex
+++ b/drc/notes/aplicacion_bipartitas.tex
@@ -31,9 +31,59 @@
 %\newtheorem{defi}[section]{Definición}
 \newtheorem{prop}[section]{Proposición}
 \newtheorem{lema}[section]{Lema}
+\newtheorem{theorem}{Teorema}
 
 \begin{document}
 \section*{Aplicación de SDA a Gráficas Bipartitas}
 
-Las siguientes notas son un resumen del trabajo 
-\end{document}
+Dada una gráfica $H$, el \textit{número de Turán} o \textit{extremal}
+$ex(n, H)$, representa el número máximo de aristas de una gráfica en
+$n$ vértices que no contiene una copia de $H$. En \cite{fox2010drc}
+se presenta el siguiente teorema:
+
+\begin{theorem}
+  Si $H = (A \cup B, F)$ es una gráfica bipartita en la que todos los
+  vértices de $B$ tienen grado
+  a lo más $r$, entonces $ex(n, H) \leq c n^{2 - 1 / r}$, donde $c =
+  c(H)$ es una constante que solo depende de $H$.
+\end{theorem}
+
+La demostración presentada en este trabajo es una aplicación directa
+de \textit{Selección Dependiente Aleatoria} (SDA)
+\begin{theorem}(Lema Básico)\label{drc}
+  Sean $\alpha, m, n, r, u$ enteros positivos. Sea $G$ una gráfica en
+  $n$ vértices y al menos $ \frac{\alpha n^2}{2}$ aristas. Si existe
+  entero positivo $t$
+  tal que
+  $$n \alpha^t - \binom{n}{r} \left(\frac{m}{n}\right)^t \geq u$$
+  entonces $G$ contiene un conjunto $U \subset V(G)$ de vértices tal que
+  $\vert U \vert \geq u$ y tal que todo subconjunto $S$ de $U$ con
+  $\vert S \vert = r$
+  tiene al menos $m$ vecinos en común.
+\end{theorem}
+% TODO: hay qu emejorar esto
+Demostración usando DRC. Sea $G$ una gráfica con $e(G) > c n^{2 -1 /
+r}$. Sean $\alpha = (2c n^{-1/r})$,
+$\vert A \vert = a$, $\vert B \vert = b$, $m = a + b$, $t = r$
+y $c = \max(a^{1/r}, \frac{3(a + b)}{r})$. Entonces
+
+\begin{eqnarray*}
+  n \alpha^t - \binom{n}{r} \left(\frac{m}{n}\right)^t &=& n (2c
+  n^{-1/r})^r - \binom{n}{r} \left(\frac{a + b}{n}\right)^r\\
+  &\geq& (2c)^r - \frac{n^r}{r!} \left((\frac{a + b}{n}\right)^r \\
+    &\geq& (2c)^r - \left(\frac{e (a + b)}{r}\right)^r\\
+    &\geq& c^r \geq a
+  \end{eqnarray*}
+  Por tanto, el Teorema \ref{drc} establece que existe un subconjunto
+  $U$ de $V(G)$ tal que $\vert U \vert = a$ y en el que todos sus
+  subconjuntos de tamaño
+  $r$ tienen al menos $a + b$ vecinos en común.
+
+  Sea $f: A \rightarrow U$ una función inyectiva cualquiera.
+  Demostraremos que $f$ se puede extender a $B$ de tal manera que
+  esta extensión es un encaje de $H$ en $G$.
+
+  El siguiente texto presenta notas sobre el trabajo realizado en
+  \cite{furedi1991}.
+
+  \end{document}
