--- a/thesis/blb.bib
+++ b/thesis/blb.bib
@@ -46,3 +46,23 @@ isbn = {0486435962},
 publisher = {Dover Publications, Inc.},
 address = {USA}
 }
+
+@techreport{caro1979,
+  title={New results on the independence number},
+  author={Caro, Yair},
+  year={1979},
+  institution={Technical Report, Tel-Aviv University}
+}
+
+@article{Kóvari1954,
+author = {Kóvari, T., Sós, V., Turán, P.},
+journal = {Colloquium Mathematicae},
+keywords = {combinatorics},
+language = {eng},
+number = {1},
+pages = {50-57},
+title = {On a problem of K. Zarankiewicz},
+url = {http://eudml.org/doc/210011},
+volume = {3},
+year = {1954},
+}
