--- a/thesis/introduccion.tex
+++ b/thesis/introduccion.tex
@@ -1,1 +1,17 @@
 \chapter{Introducción}
+
+\section{Preliminares}
+\begin{definition}
+  Una gráfica $G$ es una pareja ordenada $(V(G), E(G))$, donde $V(G)$
+  es un conjunto de \textit{vértices},  $E(G)$ es un conjunto de
+  \textit{aristas} disjunto de $V(G)$ y una \textit{función de
+  incidencia} $\psi_G$ que asocia a una arista de $G$ una pareja
+  de vértices (no necesariamente distintos) de $G$.
+
+  Si $e$ es una arista y $u$ y $v$ son vértices tal que $\psi_G(e)
+  = \{u, v\}$, entonces se dice que $e$ \textit{une} a los vértices
+  $u$ y $v$, y a estos vértices se les conoce como \textit{extremos} de $e$.
+
+  Denotamos por $v(G)$ y $e(G)$ la cardinalidad de $V(G)$ y $E(G)$
+  respectivamente.
+\end{definition}
