--- a/thesis/comparacion.tex
+++ b/thesis/comparacion.tex
@@ -1,3 +1,3 @@
-\chapter{Comparación de Selección Dependiente Aleatoria con otros Métodos}
+% \chapter{Comparación de Selección Dependiente Aleatoria con otros Métodos}
 
 \section{Gráficas Bipartitas}
