--- a/thesis/introduccion.tex
+++ b/thesis/introduccion.tex
@@ -1,17 +1,41 @@
-\chapter{Introducción}
+% \chapter{Introducción}
 
 \section{Preliminares}
-\begin{definition}
-  Una gráfica $G$ es una pareja ordenada $(V(G), E(G))$, donde $V(G)$
-  es un conjunto de \textit{vértices},  $E(G)$ es un conjunto de
-  \textit{aristas} disjunto de $V(G)$ y una \textit{función de
-  incidencia} $\psi_G$ que asocia a una arista de $G$ una pareja
-  de vértices (no necesariamente distintos) de $G$.
+Una gráfica $G$ es una pareja ordenada $(V(G), E(G))$, donde $V(G)$
+es un conjunto de \textit{vértices},  $E(G)$ es un conjunto de
+\textit{aristas} disjunto de $V(G)$ y una \textit{función de
+incidencia} $\psi_G$ que asocia a una arista de $G$ una pareja
+de vértices (no necesariamente distintos) de $G$.
 
-  Si $e$ es una arista y $u$ y $v$ son vértices tal que $\psi_G(e)
-  = \{u, v\}$, entonces se dice que $e$ \textit{une} a los vértices
-  $u$ y $v$, y a estos vértices se les conoce como \textit{extremos} de $e$.
+Si $e$ es una arista y $u$ y $v$ son vértices tal que $\psi_G(e)
+= \{u, v\}$, entonces se dice que $e$ \textit{une} a los vértices
+$u$ y $v$, y a estos vértices se les conoce como \textit{extremos} de $e$.
 
-  Denotamos por $v(G)$ y $e(G)$ la cardinalidad de $V(G)$ y $E(G)$
-  respectivamente.
-\end{definition}
+% Denotamos por $v(G)$ y $e(G)$ la cardinalidad de $V(G)$ y $E(G)$
+% respectivamente.
+
+El grado de un vértice $v$, denotado como $d(v)$, es el número de
+aristas en $G$ que inciden en $v$.
+
+\begin{theorem}[del saludo] Para cualquier gráfica $G$ con $m$
+  aristas se tiene que
+  $$\sum_{v \in V(G)} d(v) = 2m.$$
+\end{theorem}
+
+El \textit{grado promedio} $\bar{d}$ de una gráfica $G$ en $n$
+vértices es $\sum_{ v
+\in V(G)} d(v) / n$. Así pues, el Teorema anterior implica que
+
+\begin{corollary}
+  Para cualquier gráfica $G$, se tiene que $\bar{d} = 2 e(G) /n.$
+\end{corollary}
+
+Una gráfica es \textit{bipartita} si sus vértices pueden ser divididos
+en dos subconjuntos disjuntos $A$ y $B$, llamados \textit{partes}, de
+tal manera que todas las aristas de $G$ tienen un extremo en $A$ y el
+otro en $B$. Frecuentemente, denotaremos a una gráfica bipartia $H$
+con partes $A$ y $B$ como $G[A, B]$. Si todo vértice de $A$ es adyacente
+a todo vértice de $B$, entonces diremos que $G$ es una gráfica
+\textit{biparita completa}.
+Si la cardinalidad de $A$ es $s$ y la de $B$ es $t$, denotaremos a la
+gráfica bipartita completa como $K_{s, t}$.
