--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -1,4 +1,4 @@
-\documentclass{book}
+\documentclass{article}
 \usepackage[spanish,mexico]{babel}
 \usepackage[margin=2.5cm]{geometry}
 \usepackage{graphicx}
@@ -10,6 +10,7 @@
 \newcommand{\Z}{\mathbb{Z}}
 \newcommand{\Q}{\mathbb{Q}}
 \newcommand{\R}{\mathbb{R}}
+\newcommand{\E}{\mathbb{E}}
 
 \newtheorem{theorem}{Teorema}[section]
 \newtheorem{corollary}[theorem]{Corolario}
@@ -24,7 +25,7 @@
 \author{Luis Felipe González Rivas}
 
 \maketitle
-\tableofcontents
+% \tableofcontents
 
 \begin{document}
 % \input{portada.tex}
