--- a/thesis/teoria-extremal.tex
+++ b/thesis/teoria-extremal.tex
@@ -1,4 +1,4 @@
-\chapter{Teoría Extremal}
+% \chapter{Teoría Extremal}
 
 \section{La Subgráfica Prohibida}
 Dada una gráfica $H$, el \textit{número de Turán} o \textit{extremal}
