--- a/thesis/metodo-probabilistico.tex
+++ b/thesis/metodo-probabilistico.tex
@@ -1,10 +1,55 @@
+% \chapter{El Método Probabilístico}
+\section{El Método Probabilístico}
+El \textit{método probabilista} es una técnica importante en
+combinatoria. Con frecuencia, deseamos probar la existencia de
+ciertra propiedad u objeto. Para ello, el método probabilista construye
+de manera aleatoria este objeto con probabilidad mayor que cero.
 
+\begin{theorem}
+  Toda gráfica con $m$ vértices contiene una gráfica bipartita con $m
+  / 2$ aristas.
+\end{theorem}
 
-\chapter{El Método Probabilístico}
+\begin{proof}
+  Sea $G = (V, E)$ una gráfica. Asigne un color, blanco o negro, a
+  cada vértice de $G$  de manera uniforme e independiente.
 
-\section{El método básico}
+  Sea $E^\prime$ el conjunto de aristas con un extremo negro y otro
+  blanco. La gráfica $H = (V, E^\prime)$ es una subgráfica bipartita de $G$.
+  Toda arista de $G$ pertenece a $E^\prime$ con probabilidad $1/2$.
+  Por linealidad del valor esperado, el tamaño esperado de $E^\prime$ es
+  $$\E[\vert E^\prime \vert] = \frac{1}{2} \vert E \vert.$$
+  Entonces existe una coloración de tal manera que $\vert E^\prime
+  \vert \ge \frac{1}{2}\vert E \vert$. La gráfica $H = (V, E^\prime)$
+  es la subgráfica deseada.
+\end{proof}
 
 \section{La linealidad del valor esperado}
+Sean $X_1, \ldots, X_n$ variables aleatorias y sean $X = c1 X_1 + \ldots + c_n X_n$, donde $c_i$ son números reales. La \textit{linealidad del valor esperado} establece que 
+$$ \E[X] = c_1 \E[X_1] + \ldots + c_n \E[X_n]. $$
+\section{Desigualdad de Jensen}
+
+\section{Zerekiewiecz}
+
+\section{Kovari-Sos-Turán}
+
+\begin{theorem}[Kovari-Sos-Turán]
+  Sean $2 \leq s \leq t$ y sea $K_{s,t}$ la gráfica bipartita
+  completa con $s + t$ vértices. Entonces existe una constante $c =
+  c(s, t) > 0$ tal que
+  la gráfica en $n$ vértices que no contiene una copia de $K_{s, t}$
+  tiene a lo más
+  $c n^{2 - 1/s}$ aristas.
+\end{theorem}
+\begin{proof}
+  Sea $G$ una gráfica con a lo más $cn^{2 - 1/s}$ aristas.
+  Sea $\{u_1, \ldots, u_t\}$ un subconjunto de $t$ vértices de $G$.
+
+  Etiquete
+  los vértices de $G$ como $v_1, \ldots, v_n$. Para cada vértice
+  $v_i$, existen exactamente $\binom{d(v_i)}{t}$ conjuntos $\{v_1,
+  \ldots, v_t\}$
+\end{proof}
 
 \section{Selección Dependiente Aleatoria}
 Para un vértice $v$ en una gráfica $G$, sea $N(v)$ el conjunto de
@@ -21,9 +66,33 @@ $d-$subconjuntos de $A$.
   Entonces $G$ continee un conjunto de $t$ vértices cuya vecindad
   tiene al menos $\epsilon^t n - \binom{t}{2}$ vecinos en común.
 \end{theorem}
-\begin{proof}
-    Sean $v_1, \ldots, v_t$ vértices en $V(G)$.
+\begin{proof} %TODO: proof
+  Sean $v_1, \ldots, v_t$ vértices seleccionados uniformemente en
+  $V(G)$ y sea $T = \{v_1, \ldots, v_t\}$. Para un vértice $u$, la
+  probabilidad que $u$ es una vecino en común de $T$ es
+  $\left(\frac{d(v)}{n}\right)^t$.
+  Por tanto, si $A = N(T)$, se tiene que
+  \begin{eqnarray*}
+    E[\vert A \vert] &=& \sum_{v \in V(G)} Pr(v \in A) \\
+    &=& \sum_{v \in V(G)} \left(\frac{d(v)}{n} \right)^t \\
+    &\ge& n \left(\frac{d}{n}\right)^t\\
+    &=& \epsilon^t n,
+  \end{eqnarray*}
+  donde la desigualdad se sigue de la convexidad de la función $z \mapsto z^t$.
+  Por tanto, existe una elección del conjunto $T$ con al menos $\epsilon^t n $.
 
+  Note que es posible que en la elección de $T$ existan vértices
+  repetidos, esto es, $\vert T \vert < t$. Note que $Pr(v_i = v_j) =
+  1 / n$, entonces
+  $Pr(\vert T \vert < t) \le \binom{t}{2} / n$. Dado que todo
+  vértices $v$ satisface que
+  $d(v) < n$, entonces
+  \begin{eqnarray*}
+    \epsilon^t n &\le& E[\vert A \vert] \\
+    &=& E[\vert A \vert | \vert T \vert = t] Pr(\vert T \vert = t) +
+    E[\vert A \vert | \vert T \vert < t] Pr(\vert T \vert < t)  \\
+    &\le& E[\vert A \vert | \vert T \vert = t] + \binom{t}{2}
+  \end{eqnarray*}
 \end{proof}
 
 \begin{theorem}(Lema Básico)\label{drc}
